<resources>
    <string name="app_name">R3</string>
        <string name="arg_alarm_obj">AlarmObject</string>
        <string name="bundle_alarm_obj">BundleAlarmObject</string>
        <string name="alarm_title">My Alarm</string>
        <string name="dayNightTheme">DayNightTheme</string>



    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>

    <!--    Background Service-->
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="location_updated">Title</string>

</resources>