<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Time" />

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:layout_weight="1"
                android:text="역 선택"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:layout_weight="1"
                android:text="메모"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="Label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/station_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:completionThreshold="0"
                android:hint="역 선택" />

            <EditText
                android:id="@+id/edit_alarm_label2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"

                android:hint="@string/add_label_hint"
                android:inputType="textCapWords"
                android:maxLength="15"
                android:textStyle="italic" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/days"
            tools:text="Days"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@All"
                tools:text="All"
                />
            <CheckBox
                android:id="@+id/edit_alarm_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/monday"
                tools:text="Monday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/tuesday"
                tools:text="Tuesday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/wednesday"
                tools:text="Wednesday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/thursday"
                tools:text="Thursday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/friday"
                tools:text="Friday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/saturday"
                tools:text="Saturday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:text="@string/sunday"
                tools:text="Sunday"
                />

            <CheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical"/>


        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</ScrollView>